<resources>
    <string name="app_name">Iluminar</string>
    <string name="seja_bem_vindo_login_text">Seja Bem Vindo(a)!</string>
    <string name="seu_e_mail_hint_login">Seu e-mail:</string>
    <string name="sua_senha_hint_login">Sua senha:</string>
    <string name="login_button_text">Entrar</string>
    <string name="atividades_do_dia_hub">\t\tAtividades do dia</string>
    <string name="agenda_hub">\t\tAgenda</string>
    <string name="mensagens_hub">\t\tMensagens</string>
    <string name="period_prefix">Período:\t</string>
    <string name="title_activity_daily_activities">DailyActivitiesActivity</string>
    <string name="title_activity_add_screen">AddActivityScreen</string>
</resources>